--- a/app/index.html
+++ b/app/index.html
@@ -30,29 +30,34 @@
                 <nav class="header__menu">
                     <ul class="header__menu-list">
                         <li class="header__menu-item">
-                            <a class="header__menu-link" href="#">Booking</a>
+                            <a class="header__menu-link" href="#" data-scroll="#booking">Booking</a>
                         </li>
                         <li class="header__menu-item">
-                            <a class="header__menu-link" href="#">Facilities</a>
+                            <a class="header__menu-link" href="#" data-scroll="#facilities">Facilities</a>
                         </li>
                         <li class="header__menu-item">
-                            <a class="header__menu-link" href="#">About Us</a>
+                            <a class="header__menu-link" href="#" data-scroll="#about">About Us</a>
                         </li>
                         <li class="header__menu-item">
-                            <a class="header__menu-link" href="#">Location</a>
+                            <a class="header__menu-link" href="#" data-scroll="#location">Location</a>
                         </li>
                         <li class="header__menu-item">
-                            <a class="header__menu-link" href="#">Contact</a>
+                            <a class="header__menu-link" href="#" data-scroll="#contacts">Contacts</a>
                         </li>
                     </ul>
                 </nav>
+                <a class="header__burger" href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
                 <a class="header__sign-btn" href="#">Sign In</a>
             </div>
         </div>
     </header>
     <div class="wrapper">
         <div class="main">
-            <section class="booking">
+            <section class="booking" id="booking">
                 <div class="container">
                     <div class="booking__inner">
                         <div class="booking__info-box">
@@ -66,8 +71,10 @@
                             </div>
                             <form class="booking__form">
                                 <div class="booking__form-line1">
-                                    <input type="text" class="booking__form-date" placeholder="Jun 10 - 14">
-                                    <input type="text" class="booking__form-people" placeholder="2 Guests">
+                                    <input class="booking__form-date" id="calendar">
+                                    <div class="booking__form-select">
+                                        <button class="booking__form-people" type="button">2 Guests</button>
+                                    </div>
                                 </div>
                                 <div class="booking__form-line2">
                                     <input type="text" class="booking__form-country" placeholder="United States">
@@ -91,7 +98,7 @@
                     </div>
                 </div>
             </section>
-            <section class="facilities">
+            <section class="facilities" id="facilities">
                 <div class="container">
                     <div class="facilities__inner">
                         <div class="facilities__top">
@@ -175,7 +182,7 @@
                     </div>
                 </div>
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="container">
                     <div class="about__inner">
                         <div class="about__img">
@@ -296,7 +303,7 @@
                     </div>
                 </div>
             </section>
-            <section class="location">
+            <section class="location" id="location">
                 <div class="container">
                     <div class="location__inner">
                         <h3 class="location__title">
@@ -642,7 +649,7 @@
                     </div>
                 </div>
             </section>
-            <section class="contacts">
+            <section class="contacts" id="contacts">
                 <div class="container">
                     <div class="contacts__inner">
                         <div class="contacts__info">
