--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,19 @@
                                 <div class="booking__form-line1">
                                     <input class="booking__form-date" id="calendar">
                                     <div class="booking__form-select">
-                                        <button class="booking__form-people" type="button">2 Guests</button>
+                                        <button class="booking__select-btn people" type="button">2 Guests</button>
+                                        <ul class="booking__form-list">
+                                            <li class="booking__form-item" data-value="onePersone">1 Guest</li>
+                                            <li class="booking__form-item" data-value="twoPersone">2 Guests</li>
+                                            <li class="booking__form-item" data-value="threePersone">3 Guests</li>
+                                            <li class="booking__form-item" data-value="fourPersone">4 Guests</li>
+                                            <li class="booking__form-item" data-value="fivePersone">5 Guests</li>
+                                        </ul>
+                                        <input type="text" class="booking__hidden-input">
                                     </div>
                                 </div>
                                 <div class="booking__form-line2">
-                                    <input type="text" class="booking__form-country" placeholder="United States">
+                                    <select class="booking__select-country" id="countryList"></select>
                                     <button class="booking__form-btn" type="button">
                                         <img src="images/search-icon.svg" alt="search">
                                     </button>
@@ -657,7 +665,8 @@
                                 Subscribe for our mailing list to get latest updates and offers
                             </h3>
                             <p class="contacts__subtitle">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's
                             </p>
                             <form class="contacts__form">
                                 <input type="email" class="contacts__form-email" placeholder="Enter your email">
@@ -744,7 +753,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.min.js" async></script>
 </body>
 
 </html>
