custom country dropdown

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,11 @@
                                     </div>
                                 </div>
                                 <div class="booking__form-line2">
-                                    <select class="booking__select-country" id="countryList"></select>
+                                    <div class="booking__form-select country">
+                                        <button class="booking__select-btn country" id="countryList" type="button">Country</button>
+                                            <ul class="booking__form-list country"></ul>
+                                            <input type="text" class="booking__hidden-input">
+                                     </div>
                                     <button class="booking__form-btn" type="button">
                                         <img src="images/search-icon.svg" alt="search">
                                     </button>
